--- a/保障金退还.html
+++ b/保障金退还.html
@@ -1259,7 +1259,7 @@
       <div id="u2447" class="ax_default sticky_4">
         <div id="u2447_div" class=""></div>
         <div id="u2447_text" class="text ">
-          <p><span>1、已退还的不能再点击退还</span></p><p><span>2、退还的金额为这个项目的历史缴纳金额的和，实现一次性退还。</span></p><p><span>3、下载为整个的退还表，包括已退还金额和未退还金额。</span></p>
+          <p><span>1、已退还的不能再点击退还</span></p><p><span>2、退还的金额为这个项目的历史缴纳金额的和，实现一次性退还。</span></p><p><span>3、下载为整个的退还表，包括状态为已退还和未退还。</span></p>
         </div>
       </div>
     </div>
